--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://img.freepik.com/vector-premium/logotipo-juego-dinamico-controlador-consola-juego-ondas-electromagneticas-perfecto-esports_396380-157.jpg" type="image/x-icon">
 </head>
 <body>
-    <div class="baseLight"></div>
+    <div class="baseLight">🔥</div>
     <div class="shadows">
         <div class="shadows" style="--i: 0"></div>
         <div class="shadows" style="--i: 1"></div>
